--- a/src/games/space-shooter/index.html
+++ b/src/games/space-shooter/index.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas width="full" id="canvas"></canvas>
   </body>
   <script type="module" src="index.ts"></script>
 </html>
